# modular-pipeline

./: .gitignore  DURABLE_LAYER_PROPOSAL.md  HUMAN_REVIEW_REQUIRED.md  README.md  WORKSPACE_ARCHITECTURE_AUDIT.md  pyproject.toml  setup.md
analysis/: Higgs-to-diphoton.optimized_ptt_75_70.json  __init__.py  ad_hoc_smoothing_method_study.py  analysis.summary.json  analysis_versions.json  cli.py  common.py  pipeline.py  preflight.py  regions.yaml  runtime.py
analysis/config/: __init__.py  load_summary.py  summary_schema.py  versions.py
analysis/hists/: __init__.py  histmaker.py
analysis/io/: __init__.py  readers.py
analysis/objects/: __init__.py  jets.py  photons.py
analysis/plotting/: __init__.py  blinded_regions.py  hhxyy_fit_plots.py
analysis/report/: __init__.py  artifacts.py  make_report.py
analysis/routing/: __init__.py  config.py  predicates.py  route_npz.py  router.py
analysis/samples/: __init__.py  metadata.py  registry.py  strategy.py
analysis/section8_ads/: BDT_TRAINING_NOTES.md  __init__.py  ads_loader.py  (+8 more)
docs/: CONFIG_DRIVEN_CATEGORY_ROUTING.md  OBSERVABLE_LAYER_REFACTOR_PLAN.md
ledger/: CHANGELOG.md  COMPATIBILITY.md  EXECUTABLE_SERVICES.yaml  GLOBAL_INVARIANTS.yaml
modular_pipeline/: AGENTS.md  README.md  __init__.py  agents.md  cli.py  components.py  tracking.py
optimization_infra/: ARTIFACT_REUSE_POLICY.md  BRANCHING_POLICY.md  OBSERVATION_SCHEMA.md  OPTIMIZATION_CONTROL_POLICY.md  RUN_REGISTRY_SCHEMA.md  WORKFLOW_STAGE_AUDIT.md  __init__.py  artifact_manifest_schema.yaml  create_decision_packet.py  example_loop.yaml  example_scan.yaml  loop_spec_schema.yaml  plan_candidate_run.py  run_optimization_loop.py  run_scan.py  runs.jsonl  scan_spec_schema.yaml  summarize_scan.py  version_round.py  workflow_graph.yaml
runs/: README.md
scripts/: bootstrap_hhxyy_quickfit.sh  compare_hhxyy_fit_parameters.py  tabulate_local_hhxyy_fit_parameters.py
tests/: test_analysis_versions.py  test_compare_section8_outputs.py  test_config_driven_category_optimization.py  test_config_router_parity.py  test_modular_pipeline.py  test_official_bkg_selector.py  test_optimization_infra.py  test_ptt_threshold_config.py  test_routing_config_validation.py  test_section8_ads_bdt_training.py  test_section8_ads_branch_map.py  test_section8_ads_categories.py  test_section8_ads_loader.py  test_section8_ads_observables.py  test_section8_process_cutflow.py
tools/: compare_section8_outputs.py
(+26 files in other folders)
